[tool.poetry]
name = "tilelite"
version = "0.2.0-rc1"
description = "tiledesk lite"
authors = ["Gianluca Lorenzo <gianluca.lorenzo@gmail.com>"]
repository = "https://github.com/Tiledesk/tiledesk-llm"
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]

python = ">=3.12, <4.0.0"
fastapi = "0.125.0"
jsonschema= "4.25.1"
jq = "1.10.0"
python-dotenv = "1.2.1"

openai = "2.14.0"
cohere = "5.20.1"

langchain = "1.2.0"
langchain-core = "1.2.3"

langchain-community = "0.4.1"
langchain-openai = "1.1.6"
langchain-anthropic ="1.3.0"
langchain-cohere= "0.5.0"
langchain-google-genai= "4.1.2"
langchain-groq = "1.1.1"
langchain-deepseek = "1.0.1"
langchain-experimental = "0.4.1"
langchain-ollama= "1.0.1"
langchain_xai= "1.1.0"

tiktoken = "0.12.0"

#uvicorn = "^0.28"
psutil= "7.1.3"
httpx= "0.28.1"
gql= "4.0.0"
PyJWT= "2.10.1"
langchain-mcp-adapters = "0.2.1"
langgraph = "1.0.5"


[tool.poetry.dependencies.uvicorn]
version = "0.38.0"
extras = ["standard"]

[tool.poetry.group.dev.dependencies.uvicorn]
version = "0.38.0" #"0.30.3"
extras = ["standard"]

[tool.poetry.scripts]
tilelite = "tilelite.__main__:main"
